<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_add_time">

    <EditText
        android:id="@+id/addTimeHours"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/hint_add_time_hours"
        android:inputType="number"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/activity_add_time"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addTimeMinutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_add_time_minutes"

        android:inputType="number"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/addTimeHours"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/addTimeHours"
        app:layout_constraintTop_toBottomOf="@+id/addTimeHours" />

    <EditText
        android:id="@+id/addTimeSeconds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_add_time_seconds"

        android:inputType="number"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_time"
        app:layout_constraintEnd_toEndOf="@+id/addTimeMinutes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addTimeMinutes"
        app:layout_constraintTop_toBottomOf="@+id/addTimeMinutes"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/addTimeHoursText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/add_time_hours"
        app:layout_constraintBottom_toBottomOf="@+id/addTimeHours"
        app:layout_constraintEnd_toStartOf="@+id/addTimeHours"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@id/activity_add_time"
        app:layout_constraintTop_toTopOf="@+id/addTimeHours"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addTimeMinutesText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/add_time_minutes"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/addTimeMinutes"
        app:layout_constraintEnd_toEndOf="@+id/addTimeHoursText"
        app:layout_constraintStart_toStartOf="@+id/addTimeHoursText"
        app:layout_constraintTop_toTopOf="@+id/addTimeMinutes" />

    <TextView
        android:id="@+id/addTimeSecondsText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/add_time_seconds"
        app:layout_constraintBottom_toBottomOf="@+id/addTimeSeconds"
        app:layout_constraintEnd_toEndOf="@+id/addTimeMinutesText"
        app:layout_constraintStart_toStartOf="@+id/addTimeMinutesText"
        app:layout_constraintTop_toTopOf="@+id/addTimeSeconds" />

    <Button
        android:id="@+id/addTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onBtnClick"
        android:text="@string/add_time_btn"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_time"
        app:layout_constraintEnd_toEndOf="@id/activity_add_time"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/activity_add_time"
        app:layout_constraintTop_toBottomOf="@+id/addTimeSeconds"
        app:layout_constraintVertical_bias="0.497" />

    <ToggleButton
        android:id="@+id/change_time_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:checked="false"
        android:textOff="@string/change_time_toggle_OFF"
        android:textOn="@string/change_time_toggle_ON"
        app:layout_constraintBottom_toTopOf="@+id/addTimeHours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929"
        android:background="@color/colorPrimary"/>
</android.support.constraint.ConstraintLayout>